--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
   margin:0;
   padding:0;
 }
-
+@media (prefers-color-scheme: dark)
 body{
 	font-family: 'Verdana', sans-serif;
 	background-color:#000000;
