--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 body{
 	font-family: 'Verdana', sans-serif;
-	background-color:#121212;
+	background-color#FAEBD7;
 }
 }
 
@@ -15,7 +15,7 @@ body{
 }
 
 h1 {
-	color:#FAEBD7;
+	color:#121212;
 }
 
 h3{
@@ -41,7 +41,7 @@ h3{
 	position: relative;
 	top: 0;
 	background-color:#FF4500;
-	border: 3px solid #FAEBD7;
+	border: 3px solid #121212;
 	margin: 15px;
 	padding: 25px;
 }
@@ -57,8 +57,8 @@ h3{
 	top:0;
 	right: 0px; 
 	padding: 6px 90px;
-	border-left: 2px solid #FAEBD7;
-	border-bottom: 2px solid #FAEBD7;
+	border-left: 2px solid #121212;
+	border-bottom: 2px solid #121212;
 }
 
 #name-uno{
