--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@
 
 body{
 	font-family: 'Verdana', sans-serif;
-	background-color#FAEBD7;
+	background-color: #FAEBD7;
 }
 }
 
@@ -19,11 +19,11 @@ h1 {
 }
 
 h3{
-	color:#FAEBD7
+	color: #FAEBD7;
 	}
 	
 	p{
-		color:#FAEBD7
+		color: #FAEBD7;
 	}
 
 .que-vida{
